[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "=0.5.0", features = ["tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
urlencoding = "2.1.3"
strum = "0.26.2"
strum_macros = "0.26.2"

rand = "0.8.4"
rand_distr = "0.4.3"
